web/themes/custom/glazed_subtheme/css/rocket.css
/* ... */
#rocket #cboxWrapper {
    background: #2d343a;
    -moz-border-radius: 0px;
    -webkit-border-radius: 0px;
    border-radius: 0px;
}

#rocket #cboxContent {
    background: none;
    overflow: visible;
}

#rocket #cboxError {
    padding: 50px;
    border: none;
}

#rocket #cboxLoadedContent {
    margin-bottom: 28px;
}

#rocket #cboxTitle {
    display: block !important;
    position: absolute;
    background: rgba(45, 52, 58, 0.9);
    left: 0;
    font-family: "myriad-pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    line-height: 1.3rem;
    color: white;
    width: 100%;
    padding: 12px 15px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

#rocket #cboxCurrent {
    position: absolute;
    bottom: 2px;
    left: 60px;
    font-family: "eurostile", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
    font-size: 0.8rem;
    color: white;
}

#rocket .cboxSlideshow_on #cboxSlideshow {
    position: absolute;
    bottom: 0px;
    right: 30px;
    background: url(img/controls.png) no-repeat -75px -50px;
    width: 25px;
    height: 25px;
    text-indent: -9999px;
}

#rocket .cboxSlideshow_on #cboxSlideshow:hover {
    background-position: -101px -50px;
}

#rocket .cboxSlideshow_off #cboxSlideshow {
    position: absolute;
    bottom: 0px;
    right: 30px;
    background: url(img/controls.png) no-repeat -25px -50px;
    width: 25px;
    height: 25px;
    text-indent: -9999px;
}

#rocket .cboxSlideshow_off #cboxSlideshow:hover {
    background-position: -49px -50px;
}

#rocket #cboxPrevious {
    position: absolute;
    bottom: 0;
    left: 0;
    background: url(img/controls.png) no-repeat -75px 0px;
    width: 25px;
    height: 25px;
    text-indent: -9999px;
}

#rocket #cboxPrevious:hover {
    background-position: -75px -25px;
}

#rocket #cboxNext {
    position: absolute;
    bottom: 0;
    left: 27px;
    background: url(img/controls.png) no-repeat -50px 0px;
    width: 25px;
    height: 25px;
    text-indent: -9999px;
}

#rocket #cboxNext:hover {
    background-position: -50px -25px;
}

#rocket #cboxLoadingOverlay {
    background: #2D343A;
}

#rocket #cboxClose {
    position: absolute;
    bottom: 0;
    right: 0;
    background: url(img/controls.png) no-repeat -25px 0px;
    width: 25px;
    height: 25px;
    text-indent: -9999px;
}

#rocket #cboxClose:hover {
    background-position: -25px -25px;
}

#rocket #cboxDownload {
    display: block;
    width: 23px;
    height: 23px;
    background: url(img/controls.png) no-repeat -115px -15px;
    position: absolute;
    bottom: 0;
    left: 50%;
}

#rocket #cboxDownload a {
    height: 23px;
    width: 23px;
    display: block;
    background: transparent;
}

/********* End Rocket Overrides *************/

/********* Custom CSS By Smit *************/
.sector-title-section {
    padding: 50px 0 30px;
}

.sector-section {
    padding-bottom: 100px;
}

.sector-section .az-column {
    /*  display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-start;
    text-align: left;
  max-width: calc(33.33% - 30px);
    width: 100%; 
    padding: 0;
    margin: 0 15px;
    border: 1px solid #CECDC9;
     */
}

.sector-section .well.custom-box {
    padding: 0px;
}

.sector-section .az-column .az-column {
    width: 100%;
    max-width: 100%;
    margin: 0;
    padding: 0;
}

.sector-section .az-column .az-row {
    margin: 0;
}

.sector-section .az-column .well.custom-box .sector-title h3 {
    width: 100%;
    text-align: left !important;
    padding-left: 15px !important;
}

.sector-section .az-column .az-column {
    border: none !important;
    border-top: 1px solid #CECDC9 !important;
    align-items: initial;
}

.sector-section .az-column .az-column .sector-desc {
    max-width: calc(100% - 30px);
    width: 100%;
    padding: 0.5rem 0.5rem 0.5rem 0.8rem;
}

.sector-section .az-column .az-column a.az-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}

/*Rocket landing with image block styles*/
.block-block-content.fullwidth-onecol .col-sm-4 {
    display: none;
}

.block-block-content.fullwidth-onecol .col-sm-8 {
    width: 100%;
}

.block-block-content.fullwidth-onecol .landing-content-main-content {
  padding-bottom: 20px;
}

footer .container-col {
    margin-bottom: 0;
}

footer .region .az-section {
    padding-top: 50px !important;
    padding-bottom: 50px !important;
}

footer .region .az-section .az-column .az-text p a:hover {
    text-decoration: none;
}

footer .region .az-section .az-column.footer-social {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-start;
}

footer .region .az-section .az-column.footer-social a.az-icon,
footer .region .az-section .az-column.footer-social .az-text {
    width: 35px;
    height: 35px;
    margin-right: 10px;
    margin-bottom: 10px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    background: #0054A4;
}

footer .region .az-section .az-column.footer-social .az-text {
    background-color: transparent;
}

footer .region .az-section .az-column.footer-social a.az-icon:hover {
    background-color: #0b88ff;
}

footer .region .az-section .az-column.footer-social a.az-icon .az-icon i {
    background-color: transparent;
    padding: 0;
    width: auto;
    height: auto;
}

footer .region .az-section .az-column .az-cms-element,
footer .region .az-section .az-column .az-cms-element .search-block-form .form-item .input-group {
    width: 100%;
}

footer .region .az-section .az-column .az-cms-element .search-block-form .form-item .input-group {
    margin-top: 10px;
}

footer .region .az-section .az-column .az-cms-element .search-block-form .form-item .input-group input,
footer .region .az-section .az-column .az-cms-element .search-block-form .form-item .input-group .input-group-btn button {
    border-radius: 0;
}
/* ... */

